--- a/README.mkd
+++ b/README.mkd
@@ -1,16 +1,5 @@
-Release Notes  -  SABnzbd 1.2.0RC1
+Release Notes  -  SABnzbd 1.2.0
 ====================================
-
-## New since Beta 1
-- Multiple RSS feeds can now share the same set of filters
-- Config Search function
-- CherryPy logging only enabled when forced via command line
-
-## Fixes since Beta 1
-- Fix LogHandler error on startup
-- Fix CherryPy error for some pages
-- Fix JavaScript hang-ups on RSS pages
-- Fix problems loading Notifications page with Scripts Folder set
 
 ## What's new in 1.2.0
 - New SSL engine:
@@ -26,11 +15,12 @@ Release Notes  -  SABnzbd 1.2.0RC1
   * Matching of start of category inside NZB with user-categories
     For example 'Movies > HD' will match a 'movies' category
   * Categories can now be ordered to customize matching to categories in NZB's
-- Improvements to RSS:
+- Improvements to RSS feed management:
   * Multiple feeds can now share the same set of filters
   * Added 'From Show SxxEyy' filter
-  * RSS feeds now show the category, age and when the NZB was added to the queue
-  * RSS feeds will only re-evaluate after clicking 'Apply Filters' or 'Read Feed'
+  * Feeds will only re-evaluate after clicking 'Apply Filters' or 'Read Feed'
+  * Information from newznab, nZEDb and nntmux tags used (age, size and show info)
+  * Feeds now show the category, age and when the NZB was added to the queue
 - Detection of par2-files in completely obfuscated NZB's
 - Verification (par2) and UnRAR can now be aborted from Glitter
 - Faster startup and restart of SABnzbd
@@ -43,6 +33,7 @@ Release Notes  -  SABnzbd 1.2.0RC1
 - Update 7zip to 16.04 and UnRar to 5.40 for Windows/macOS
 - Update Python to 2.7.13 on Windows and macOS binaries
 - CherryPy logging only enabled when forced via command line
+- Not having C yEnc module will trigger warning on startup
 
 ## Bug fixes
 - Re-use IP-address for new connections when a server has open connections
