Leave HTTPS port empty so enabeling HTTPS does this on default port
Why open 2 ports?

--- a/po/main/en.po
+++ b/po/main/en.po
@@ -131,6 +131,6 @@ msgstr ""
 
 #: sabnzbd/skintext.py:333
 msgid "If empty, the standard port will only listen to HTTPS."
-msgstr "If empty, the SABnzbd Port set above will only listen to HTTPS."
+msgstr "If empty, the SABnzbd Port set above will listen to HTTPS."
 
 
