--- a/README.mkd
+++ b/README.mkd
@@ -12,6 +12,7 @@ Release Notes  -  SABnzbd 1.2.1
 - Categories were not matched properly if list of tags was set
 - PostProcessing-script was not called on Accept&Fail or Dupe detect
 - Support for newer par2cmdline(-mt) versions that need -B parameter
+- Fixed some newsservers would report timeout on connect
 
 ## About
   SABnzbd is an open-source cross-platform binary newsreader.
