--- a/README.mkd
+++ b/README.mkd
@@ -17,7 +17,7 @@ Release Notes  -  SABnzbd 1.2.1 Beta 1
 - Categories were not matched properly if a list of tags was set
 - PostProcessing-script was not called on Accept&Fail or Dupe detect
 - Support for newer par2cmdline(-mt) versions that need -B parameter
-- Some newsservers would report timeout on connect
+- Some newsservers would timeout when connecting
 - Duplicate detection set to Fail would not work for RSS feeds
 - More robust detection of execute permissions for scripts
 - CPU type reporting on Windows and macOS
